[gd_scene load_steps=12 format=3 uid="uid://cir06ea8anior"]

[ext_resource type="Script" path="res://fish.gd" id="1_xevwa"]
[ext_resource type="Texture2D" uid="uid://ptsscww1xvpn" path="res://images/fish2.png" id="2_i73ch"]
[ext_resource type="Texture2D" uid="uid://cx0tcagcj3hvx" path="res://images/fish3.png" id="3_2pqe7"]
[ext_resource type="Texture2D" uid="uid://baiuvy3wrip1b" path="res://images/fish4.png" id="4_1w7w1"]
[ext_resource type="Texture2D" uid="uid://d0pq4lu67yjnc" path="res://images/fish5.png" id="5_iea37"]
[ext_resource type="Texture2D" uid="uid://c5e1oydqv1j6p" path="res://images/fish6.png" id="6_7xkmo"]
[ext_resource type="Texture2D" uid="uid://pq653vb4h78p" path="res://images/fish7.png" id="7_sgebd"]
[ext_resource type="AudioStream" uid="uid://2hanxxl7x5wf" path="res://sounds/normalfish.wav" id="8_0pu6o"]

[sub_resource type="SpriteFrames" id="SpriteFrames_6xa77"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_i73ch")
}, {
"duration": 1.0,
"texture": ExtResource("3_2pqe7")
}, {
"duration": 1.0,
"texture": ExtResource("4_1w7w1")
}, {
"duration": 1.0,
"texture": ExtResource("5_iea37")
}, {
"duration": 1.0,
"texture": ExtResource("6_7xkmo")
}, {
"duration": 1.0,
"texture": ExtResource("7_sgebd")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_vhvuo"]
radius = 13.5093

[sub_resource type="CircleShape2D" id="CircleShape2D_y76hm"]
radius = 23.0

[node name="fish" type="RigidBody2D"]
collision_layer = 0
script = ExtResource("1_xevwa")
weight = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_6xa77")
frame_progress = 0.548269

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_i73ch")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -2.5)
shape = SubResource("CircleShape2D_vhvuo")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_y76hm")

[node name="test" type="Timer" parent="."]
autostart = true

[node name="tenable" type="Timer" parent="."]
autostart = true

[node name="Despawn" type="Timer" parent="."]
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_0pu6o")
autoplay = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="test" to="." method="_on_test_timeout"]
[connection signal="timeout" from="tenable" to="." method="_on_tenable_timeout"]
[connection signal="timeout" from="Despawn" to="." method="_on_despawn_timeout"]
